--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "antd": "^3.22.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
     "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
+    "redux-immutable": "^4.0.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
